Add Link component, migrate PortableText to Text
Migrate to Text to ensure double JS for paint worklets don't get added on recursion

--- a/astro/src/components/portable-text/DynamicBody.astro
+++ b/astro/src/components/portable-text/DynamicBody.astro
@@ -1,10 +1,11 @@
 ---
-import PortableText from '$components/PortableText.astro';
+import PortableText from './PortableText.astro';
 import Message from './Message.svelte';
 import Heading from './Heading.svelte';
 import Picture from './Picture.svelte';
 import Stats from '$components/Stats.svelte';
 import Figure from './Figure.svelte';
+import Link from './Link.svelte';
 
 const { node: props /* , isInline, class */ } = Astro.props;
 ---
@@ -25,6 +26,10 @@ const { node: props /* , isInline, class */ } = Astro.props;
   ) : props._type === 'block' &&
     (props.style === 'h2' || props.style === 'h3') ? (
     <Heading block={props} />
+  ) : props.markType == 'link' ? (
+    <Link mark={props.markDef}>
+      <PortableText body={props.children} wrapped={false} inline={true} />
+    </Link>
   ) : (
     <PortableText body={props.children} />
   )
