--- a/astro/src/pages/[lang]/[landing].astro
+++ b/astro/src/pages/[lang]/[landing].astro
@@ -1,12 +1,13 @@
 ---
-import Wrapper from '$layouts/wrapper.astro';
+import Section from '$layouts/section.astro';
 
 import { landings, microcopy as micro } from '$lib/sanity';
-import { buildSection } from '$lib/documentation';
+import { buildSection, buildTopics } from '$lib/documentation';
 
 import SectionNav from '$components/SectionNav.svelte';
 import Text from '$components/Text.astro';
 import AppSupport from '$components/AppSupport.svelte';
+import Card from '$components/Card.svelte';
 
 /**
  * Static paths
@@ -31,6 +32,9 @@ export function getStaticPaths() {
 const { landing, microcopy } = Astro.props;
 
 const section = buildSection(landing.category);
+const topics = buildTopics(section.map((s) => s.href));
+
+console.log(topics);
 
 let color = 'var(--primary-blue)';
 
@@ -47,101 +51,71 @@ switch (landing.category.slug) {
 }
 ---
 
-<Wrapper
+<Section
   title={landing.title}
   locale={microcopy.locale}
   metadesc={landing.description}
 >
-  <article class="section">
-    <aside class="section--subnav">
-      <SectionNav
-        active={landing._path}
-        title={landing.category.title}
-        links={section}
-        client:visible
-      />
-    </aside>
-    <header
-      class="section--header type--mega"
-      style={`background: ${color}`}
-      id="content"
-    >
-      <h1 class="section--title">{landing.title}</h1>
-      <div class="section--hero">
-        <picture>
-          <source srcset={landing.banner.wide} media="(min-width: 840px)" />
-          <img src={landing.banner.narrow} alt="" />
-        </picture>
-      </div>
-    </header>
-    <div class="section--content">
-      <section class="type" id="article">
-        <div>
-          <Text body={landing.body} />
-          <AppSupport lang={landing._lang} />
-        </div>
-      </section>
-      <!-- {
-        meta.interest && (
-          <div>
-            <DeveloperOptIn
-              title={meta.interest.title}
-              description={meta.interest.body}
-              cta={meta.interest.cta}
-            />
-          </div>
-        )
-      } -->
-      <!-- <ChapterListing microcopy={microcopy} chapters={chapters} /> -->
-      <!-- <section class="section--topics">
-        <h3 class="type--h1">{microcopy.microcopy.landing.chapters}</h3>
-        <ul>
-          {
-            chapters.map((chapter) => (
-              <Card
-                title={chapter.title}
-                body={chapter.meta.metadesc}
-                cta={{
-                  type: 'link',
-                  direction: 'forward',
-                  url: chapter.href,
-                  text: '',
-                }}
-              />
-            ))
-          }
-        </ul>
-      </section> -->
-    </div>
-  </article>
-</Wrapper>
+  <SectionNav
+    active={landing._path}
+    title={landing.category.title}
+    links={section}
+    client:visible
+    slot="subnav"
+  />
 
-<!-- <Doc
-  title={landing.title}
-  locale={microcopy.locale}
-  metadesc={landing.description}
-  section={landing._section}
->
-  
-  
-</Doc> -->
+  <header
+    class="hero type--mega"
+    style={`background: ${color}`}
+    id="content"
+    slot="header"
+  >
+    <h1 class="hero--title">{landing.title}</h1>
+    <div class="hero--hero">
+      <picture>
+        <source srcset={landing.banner.wide} media="(min-width: 840px)" />
+        <img src={landing.banner.narrow} alt="" />
+      </picture>
+    </div>
+  </header>
+
+  <Fragment slot="content">
+    <Text body={landing.body} />
+    <AppSupport lang={landing._lang} />
+  </Fragment>
+
+  <Fragment slot="topics">
+    <h3 class="topics-header type--h1">
+      {microcopy.topics.section}
+    </h3>
+    <div class="topics">
+      {
+        topics.map(({ title, body, cta }) => (
+          <Card title={title} body={body} position="end" cta={cta} />
+        ))
+      }
+    </div>
+  </Fragment>
+</Section>
 
 <style lang="scss">
   @import '$sass/shared';
 
-  .section {
-    display: grid;
-    --inline-subnav: 1;
+  .hero {
+    padding-inline: var(--inline-padding);
+    padding-inline-end: 0;
 
-    @include mq($bkpt-article--2-cols) {
-      --inline-subnav: 0;
-      grid-template-columns: 300px 1fr minmax(50ch, 90ch) 1fr;
-      grid-template-rows: auto auto 1fr auto;
-    }
+    margin-block-end: 1.5rem;
+    display: flex;
+    overflow: hidden;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
 
-    &--title,
-    &--hero {
-      grid-row: 1;
+    &--title {
+      color: var(--white);
+      text-wrap: balance;
+      padding-block: var(--header-spacing);
     }
 
     &--hero {
@@ -157,52 +131,15 @@ switch (landing.category.slug) {
         max-height: 5em;
       }
     }
+  }
 
-    &--title {
-      color: var(--white);
-      text-wrap: balance;
-      padding-block: var(--header-spacing);
-    }
+  .topics-header {
+    text-align: center;
+  }
 
-    &--header,
-    &--content,
-    &--extras {
-      padding-inline: 1.5rem;
-      @include mq($bkpt-article--2-cols) {
-        grid-column: 3;
-      }
-    }
-
-    &--content {
-      padding-block-end: 2rem;
-    }
-
-    &--header {
-      padding-inline-end: 0;
-
-      margin-block-end: 1.5rem;
-      display: flex;
-      overflow: hidden;
-      justify-content: space-between;
-      align-items: center;
-      gap: 1rem;
-
-      @include mq($bkpt-article--2-cols) {
-        grid-column: 2 / -1;
-      }
-    }
-
-    &--subnav {
-      @include mq($bkpt-article--2-cols) {
-        grid-row: 1 / span 2;
-        padding-block-end: 2rem;
-      }
-    }
-
-    &--content {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-    }
+  .topics {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
+    gap: 1.5rem;
   }
 </style>
