Add code highlighting to portable text

--- a/astro/src/components/portable-text/PortableText.astro
+++ b/astro/src/components/portable-text/PortableText.astro
@@ -23,6 +23,7 @@ const components = {
     picture: DynamicBody,
     statlist: DynamicBody,
     figure: DynamicBody,
+    code: DynamicBody,
   },
 };
 ---
