--- a/astro/src/components/portable-text/DynamicBody.astro
+++ b/astro/src/components/portable-text/DynamicBody.astro
@@ -6,6 +6,7 @@ import Picture from './Picture.svelte';
 import Stats from '$components/Stats.svelte';
 import Figure from './Figure.svelte';
 import Link from './Link.svelte';
+import Code from './Code.svelte';
 
 const { node: props /* , isInline, class */ } = Astro.props;
 ---
@@ -23,6 +24,8 @@ const { node: props /* , isInline, class */ } = Astro.props;
     <Figure block={props}>
       <PortableText body={props.caption} wrapped={false} />
     </Figure>
+  ) : props._type === 'code' ? (
+    <Code block={props} />
   ) : props._type === 'block' &&
     (props.style === 'h2' || props.style === 'h3') ? (
     <Heading block={props} />
