--- a/astro/src/components/portable-text/PortableText.astro
+++ b/astro/src/components/portable-text/PortableText.astro
@@ -14,6 +14,7 @@ const components = {
   block: {
     h2: DynamicBody,
     h3: DynamicBody,
+    br: DynamicBody,
   },
   mark: {
     link: DynamicBody,
@@ -25,6 +26,7 @@ const components = {
     figure: DynamicBody,
     code: DynamicBody,
   },
+  hardbreak: DynamicBody,
 };
 ---
 
