--- a/astro/src/components/portable-text/PortableText.astro
+++ b/astro/src/components/portable-text/PortableText.astro
@@ -17,12 +17,15 @@ const components = {
   },
   mark: {
     link: DynamicBody,
+    kbd: DynamicBody,
   },
   type: {
     Message: DynamicBody,
+    message: DynamicBody,
     picture: DynamicBody,
     statlist: DynamicBody,
     figure: DynamicBody,
+    youtube: DynamicBody,
   },
 };
 ---
