--- a/astro/src/sass/components/_typography.scss
+++ b/astro/src/sass/components/_typography.scss
@@ -124,7 +124,8 @@ $section-block-margin: 3.75rem;
 
   // Long-form type styling
   /* stylelint-disable-next-line selector-max-compound-selectors */
-  * + *:not(:empty):not(.header-anchor--wrapper) {
+  * + *:not(:empty):not(.header-anchor--wrapper),
+  * + astro-island > *:not(:empty) {
     margin-top: 1em;
   }
 
