--- a/astro/src/pages/[lang]/stories/[page].astro
+++ b/astro/src/pages/[lang]/stories/[page].astro
@@ -1,78 +1,74 @@
 ---
 import type { CTA } from '$types/content';
+import type { Microcopy } from '$types/sanity';
 import Article from '$layouts/article.astro';
 import TOC from '$components/TOC.svelte';
 import Published from '$components/Published.svelte';
 import StoryBanner from '$components/stories/StoryBanner.svelte';
-import { renderMarkdown } from '$$markdown';
-import { metaFromFile } from '$$data';
-import { getMicrocopy } from '$$microcopy';
+import { stories, microcopy as micro } from '$lib/sanity';
+import Text from '$components/Text.astro';
+import { buildTOC } from '$lib/portabletext';
 
 /**
  * Builds paths for news pagination
+ *
+ * @return {object} paths
  */
-export async function getStaticPaths() {
-  const posts = await Astro.glob('../../../markdown/**/stories/*.md');
-  return await Promise.all(
-    posts.map(async (post) => {
-      const { slug, lang } = metaFromFile(post.file);
-      const { content, toc } = await renderMarkdown(post.rawContent());
-
-      console.log(slug);
-
-      post.frontmatter.date = new Date(post.frontmatter.date);
-      return {
-        params: {
-          lang,
-          page: slug.replace(/^stories\//, ''),
-        },
-        props: {
-          content,
-          toc,
-          meta: post.frontmatter,
-          microcopy: getMicrocopy(lang),
-        },
-      };
-    }),
-  );
+export function getStaticPaths() {
+  return stories.map((story) => {
+    console.log(story);
+    return {
+      params: {
+        lang: story._langCode,
+        page: story._slug,
+      },
+      props: {
+        story,
+        microcopy: micro[story._lang] as Microcopy,
+      },
+    };
+  });
 }
 
-const { content, toc, meta, microcopy } = Astro.props;
+const { story, microcopy } = Astro.props;
 const { locale } = microcopy;
 
+// TODO - i18n text
 const cta: CTA = {
-  text: microcopy.microcopy.breadcrumbs.replace('((t))', 'Stories'),
+  text: microcopy.actions.back.replace('((a))', 'Stories'),
   url: `/${locale.code}/stories`,
   type: 'link',
   direction: 'back',
 };
+
+const toc = buildTOC(story.body);
 ---
 
-<Article title={meta.title} metadesc={meta.metadesc} microcopy={microcopy}>
+<Article title={story.title} metadesc={story.description} microcopy={microcopy}>
   <Fragment slot="header">
-    <StoryBanner story={meta} cta={cta} />
+    <StoryBanner story={story} cta={cta} />
   </Fragment>
   <!-- Hero image -->
   {
-    meta?.hero?.image && (
-      <img src={meta.hero.image} alt={meta.hero.alt} slot="hero" />
+    story?.hero?.image && (
+      <img src={story.hero.image} alt={story.hero.alt} slot="hero" />
     )
   }
   <!-- Main content area -->
-  <Fragment slot="content" set:html={content} />
-  <!-- Extras sidegar -->
+  <Text body={story.body} slot="content" />
+  <!-- Extras sidebar -->
   <Fragment slot="extras">
     <!-- Published date info -->
     <Published
       locale={locale.code}
-      label={meta.updated
-        ? microcopy.microcopy.lastUpdated
-        : microcopy.microcopy.datePosted}
-      date={meta.updated || meta.date}
+      label={story.dates.updated
+        ? microcopy.meta.updated
+        : microcopy.meta.posted}
+      date={story.dates.updated || story.dates.published}
       wrapper="section"
     />
 
     <!-- Table of Contents -->
-    {toc.length > 0 && <TOC toc={toc} client:load />}
+    {toc.length > 0 && <TOC toc={toc} client:idle />}
   </Fragment>
 </Article>
