Migrate Newsletter form Sanity

--- a/astro/src/components/Text.astro
+++ b/astro/src/components/Text.astro
@@ -3,12 +3,14 @@ import PortableText from '$components/portable-text/PortableText.astro';
 
 export interface Props {
   body: any;
+  wrapped?: boolean;
+  inline?: boolean;
 }
 
-const { body } = Astro.props;
+const { body, wrapped = true, inline = false } = Astro.props;
 ---
 
-<PortableText body={body} />
+<PortableText body={body} wrapped={wrapped} inline={inline} />
 
 <script>
   // Include paint worklets
