Cleanup log output

--- a/astro/src/layouts/doc.astro
+++ b/astro/src/layouts/doc.astro
@@ -21,7 +21,7 @@ const related = findRelated(title, locale.code, Astro.url.pathname);
 // console.log(locale);
 const microcopy = getMicrocopyFromLangCode(locale.code);
 // const microcopy = getMicrocopy(locale.code);
-console.log(microcopy);
+// console.log(microcopy);
 ---
 
 <Wrapper title={title} metadesc={metadesc} locale={locale} props={props}>
