--- a/astro/src/pages/[lang].astro
+++ b/astro/src/pages/[lang].astro
@@ -21,6 +21,7 @@ export function getStaticPaths() {
 
 const { microcopy } = Astro.props;
 const { locale } = microcopy;
+// console.log(locale);
 // const hero = { heading: home.hero.heading, copy: home.hero.copy };
 
 // console.log(languages);
