--- a/astro/src/components/portable-text/PortableText.astro
+++ b/astro/src/components/portable-text/PortableText.astro
@@ -28,6 +28,10 @@ const components = {
     figure: DynamicBody,
     youtube: DynamicBody,
     code: DynamicBody,
+    quote: DynamicBody,
+    span: DynamicBody,
+    break: DynamicBody,
+    table: DynamicBody,
   },
   hardbreak: DynamicBody,
 };
