--- a/astro/src/sass/components/_typography.scss
+++ b/astro/src/sass/components/_typography.scss
@@ -247,4 +247,33 @@ $section-block-margin: 3.75rem;
   .message {
     margin: 2.5rem 0;
   }
+
+  // Table
+  table {
+    border: 1px solid var(--grey-300);
+    border-collapse: collapse;
+    margin: 0 auto;
+  }
+
+  th {
+    background-color: var(--blue-600);
+    color: var(--white);
+    line-height: 1.25;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  th,
+  td {
+    border: 1px solid var(--grey-300);
+    padding: 0.5rem;
+  }
+
+  td {
+    vertical-align: top;
+  }
+
+  tbody tr:nth-of-type(even) {
+    background-color: var(--grey-100);
+  }
 }
