--- a/astro/src/components/portable-text/PortableText.astro
+++ b/astro/src/components/portable-text/PortableText.astro
@@ -19,6 +19,7 @@ const components = {
   mark: {
     link: DynamicBody,
     kbd: DynamicBody,
+    footnote: DynamicBody,
   },
   type: {
     Message: DynamicBody,
