--- a/astro/src/pages/[lang].astro
+++ b/astro/src/pages/[lang].astro
@@ -30,6 +30,8 @@ const { locale } = microcopy;
 <Wrapper locale={locale} metadesc="" title="ChromeOS.dev">
   <!-- <AnimatedHero hero={hero} client:idle /> -->
 
+  <div id="search">Search</div>
+
   <script>
     import { theme } from '$js/theme';
     import { animationPlaceholders } from '$js/constants';
