--- a/astro/src/pages/[lang]/search.astro
+++ b/astro/src/pages/[lang]/search.astro
@@ -28,15 +28,20 @@ const { locale } = microcopy;
 ---
 
 <Wrapper locale={locale} metadesc="" title="ChromeOS.dev">
-  <Search locale={locale} label="Search" />
-  <div id="SearchResults">
-    <SearchResults
-      resultsString={microcopy.search.results}
-      locale={locale}
-      pagination={microcopy.pagination}
-      client:load
-    />
-  </div>
+  <article class="wrapper wrapper--full-bleed wrapper--padding">
+    <div class="search-wrapper">
+      <Search locale={locale} label="Search" />
+    </div>
+
+    <div id="SearchResults">
+      <SearchResults
+        resultsString={microcopy.search.results}
+        locale={locale}
+        pagination={microcopy.pagination}
+        client:load
+      />
+    </div>
+  </article>
 
   <script type="module">
     // eslint-disable-next-line import/no-unresolved
@@ -50,6 +55,7 @@ const { locale } = microcopy;
 <style lang="scss">
   .wrapper {
     background-color: var(--grey-100);
+    min-height: 100%;
   }
 
   .search-wrapper {
@@ -60,13 +66,5 @@ const { locale } = microcopy;
     gap: 2rem;
     max-width: 80ch;
     margin-inline: auto;
-  }
-
-  .results {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
   }
 </style>
