Add inline padding to search page

--- a/astro/src/pages/[lang]/search.astro
+++ b/astro/src/pages/[lang]/search.astro
@@ -28,7 +28,7 @@ const { locale } = microcopy;
 ---
 
 <Wrapper locale={locale} metadesc="" title="ChromeOS.dev">
-  <article class="wrapper wrapper--full-bleed wrapper--padding">
+  <article class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded">
     <div class="search-wrapper">
       <Search locale={locale} label="Search" />
     </div>
